homework/5.kubernetes-network/manifest/Redmine-Deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redmine
  
spec:
  replicas: 1
  
  selector:
    matchLabels:
      app : redmine
    
  template:
    metadata:
      labels:
        app : redmine
        
    spec:
      containers:
        - name : redmine
          image: redmine:4.2
          ports:
            - containerPort: 3000
