homework/5.kubernetes-network/manifest/postgres-Deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres
 
spec:
  replicas: 1
  strategy:
    type  : Recreate
  
  selector:
    matchLabels:
      app : postgres
    
  template:
    metadata:
      labels:
        app : postgres
        
    spec:
      containers:
        - name : postgres
          image: postgres:10.13
          ports:
            - containerPort: 5432
              protocol     : TCP 
              
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name     : testdatabase
      
      volumes:
        - name: testdatabase
          persistentVolumeClaim:
            claimName: postgres-pv-claim
