homework/5.kubernetes-network/manifest/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redmine-ingress
spec:
  defaultBackend:
    service:
      name: redmine
      port:
        number: 3000
